# SnopAnalysis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  mc_list.json  mc_list_bismsb.json  mc_list_ppo.json
cmake/: Config.hh.in
config/: bipo214_sample_mc.json  get_prompt.json  roi_filter.json  tag_bipo.json  tag_mc.json  tag_mc_bipo.json  tag_run.json  test.json  trim.json
config/bismsb/: bipo214_sample.json  bipo214_sample_mc.json  get_delayed.json  roi_filter.json  tag_mc.json  tag_mc_bipo.json  tag_run.json
config/ppo/: roi_filter.json  tag_mc.json  tag_mc_bipo.json  tag_run.json
config/trim/: Analysis15_802_Bronze_364311_368447_Apr2025.json  Analysis15_bMR_801_802_Bronze_358080_364310.json  trim_by_run.json
doc/: InputProviders.md  OutputWriter.md  Steps.md
scripts/: deploy_mc.py  deploy_tagging.py  run_list.py  validate_tagging.py
src/: AliasStep.cc  CMakeLists.txt  CoincidenceStep.cc  CountStep.cc  DefineStep.cc  DeltaTStep.cc  DescribeStep.cc  DisplayStep.cc  FileListInputProvider.cc  FileListProvider.cc  FilterStep.cc  GlobProvider.cc  ReportStep.cc  ResetStep.cc  RunProvider.cc  SnapshotWriter.cc  TChainProvider.cc  WildcardProvider.cc
src/include/: AliasStep.hh  CoincidenceStep.hh  Context.hh  CountStep.hh  DefineStep.hh  DeltaTStep.hh  DescribeStep.hh  DisplayStep.hh  FileListInputProvider.hh  FileListProvider.hh  FilterStep.hh  GlobProvider.hh  InputProvider.hh  InputProviderRegistry.hh  Logger.hh  OutputWriter.hh  OutputWriterRegistry.hh  ReportStep.hh  ResetStep.hh  RunProvider.hh  SnapshotWriter.hh  Step.hh  StepRegistry.hh  TChainProvider.hh  WildcardProvider.hh  util.hh
tools/: CheckRootFiles.cc  RunAnalysis.cc  test.cc
